# gameclip_app

./: .env.example  .gitignore  ADMIN_DASHBOARD_TODO.md  CHANGES_SUMMARY.md  GOOGLE_ADS_EXAMPLES.md  GOOGLE_ADS_IMPLEMENTATION.md  GOOGLE_ADS_README.md  GOOGLE_ADS_SETUP.md  INSTALLATION_SUMMARY.md  LICENSE  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  SUPABASE_SETUP.md  gameclip_uploader.md  pyproject.toml  requirements.txt
configs/: ad_config.txt  config.py
docs/: ACCESS_LEVELS_GUIDE.md  ADMIN_DASHBOARD_TODO.md  AUDIT_LOGGING_GUIDE.md  AUDIT_LOG_IMPLEMENTATION_SUMMARY.md  AUDIT_LOG_QUICK_REFERENCE.md  AUDIT_LOG_VIEWER_IMPLEMENTATION.md  FIREBASE_INDEXES.md  METADATA_PRESETS_COMPLETE.md  METADATA_PRESETS_IMPLEMENTATION.md  NEW_FEATURES_TEST_SUMMARY.md  PREMIUM_PURCHASE_IMPLEMENTATION.md  PURCHASE_TESTING_GUIDE.md  TEST_SUMMARY.md
src/: main.py  temp_concat_list.txt
src/access_control/: AUTH_README.md  README.md  __init__.py  firebase_service.py  purchase_service.py  roles.py  session.py  supabase_service.py  usage_tracker.py
src/access_control/auth/: README.md  firebase_auth.py  firebase_auth_mock.py  user_session.py
src/access_control/config/: README.md  firebase_config.json.example
src/access_control/gui/: README.md  auth_screen.py  auth_screen_old.py  example_integration.py  login_screen.py  role_ui.py
src/access_control/security/: README.md  firestore.rules
src/app/: __init__.py  video_processor.py
src/app/gui/: __init__.py  admin_dashboard.py  admin_dashboard_integration_example.py  admin_dashboard_screen.py  arrangement_screen.py  audit_log_viewer.py  config_tab.py  login_screen.py  main_window.py  save_upload_screen.py  selection_screen.py  upload_screen.py
src/app/services/: __init__.py  ad_manager.py  ads_manager.py  google_ads_service.py
src/app/video_core/: __init__.py  cache_processor.py  video_metadata.py  video_processor.py
src/uploader/: __init__.py  auth.py  metadata.py  queue_manager.py  uploader.py
src/utils/: path_helper.py
tests/: METADATA_PRESETS_TESTING_GUIDE.md  QUICK_TEST_GUIDE.md  conftest.py  test_admin_dashboard_integration.py  test_admin_user_management.py  test_audit_filtering.py  test_audit_log_viewer.py  test_auth.py  test_cache_diagnosis.py  test_cache_processor.py  test_disable_user.py  test_drag_drop_restrictions.py  test_firebase.py  test_guest_arrangement_flow.py  test_integration.py  test_merge_other_clips_button.py  test_metadata_presets.py  test_purchase_service.py  test_roles.py  test_same_codec.py  test_session.py  test_session_purchase.py  test_session_usage_integration.py  test_ui_feedback.py  test_upload.py  test_usage_tracker.py  test_video_processor.py  test_youtube_upload_blocking.py
