[project]
name = "videomerger-app"
version = "0.5.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jave Bacsain", email = "javbacsain@my.cspc.edu.ph",
      name = "Carl Gerald Parro", email = "caparro@my.cspc.edu.ph",
      name = "Marc Justin Prestado", email = "maprestado@my.cspc.edu.ph"
    }
]
dependencies = [
  anyio==4.11.0
  arrow==1.4.0
  binaryornot==0.4.4
  CacheControl==0.14.4
  cachetools==6.2.2
  certifi==2025.11.12
  cffi==2.0.0
  chardet==5.2.0
  charset-normalizer==3.4.4
  click==8.3.1
  colorama==0.4.6
  cookiecutter==2.6.0
  cryptography==46.0.3
  ffmpeg-python==0.2.0
  firebase_admin==7.1.0
  flet==0.28.3
  flet-cli==0.28.3
  flet-desktop==0.28.3
  flet-video==0.1.1
  future==1.0.0
  gcloud==0.18.3
  google-api-core==2.28.1
  google-api-python-client==2.187.0
  google-auth==2.41.1
  google-auth-httplib2==0.2.1
  google-auth-oauthlib==1.2.3
  google-cloud-core==2.5.0
  google-cloud-firestore==2.21.0
  google-cloud-storage==3.6.0
  google-crc32c==1.7.1
  google-resumable-media==2.8.0
  googleapis-common-protos==1.72.0
  grpcio==1.76.0
  grpcio-status==1.76.0
  h11==0.16.0
  h2==4.3.0
  hpack==4.1.0
  httpcore==1.0.9
  httplib2==0.31.0
  httpx==0.28.1
  hyperframe==6.1.0
  idna==3.11
  iniconfig==2.3.0
  Jinja2==3.1.6
  jwcrypto==1.5.6
  markdown-it-py==4.0.0
  MarkupSafe==3.0.3
  mdurl==0.1.2
  msgpack==1.1.2
  oauth2client==4.1.3
  oauthlib==3.3.1
  packaging==25.0
  pillow==12.0.0
  pluggy==1.6.0
  proto-plus==1.26.1
  protobuf==6.33.1
  pyasn1==0.6.1
  pyasn1_modules==0.4.2
  pycparser==2.23
  pycryptodome==3.23.0
  Pygments==2.19.2
  PyJWT==2.10.1
  pyparsing==3.2.5
  pypng==0.20220715.0
  Pyrebase4==4.8.0
  pytest==9.0.1
  python-dateutil==2.9.0.post0
  python-dotenv==1.2.1
  python-jwt==4.1.0
  python-slugify==8.0.4
  PyYAML==6.0.3
  qrcode==7.4.2
  repath==0.9.0
  requests-oauthlib==2.0.0
  requests-toolbelt==0.10.1
  rich==14.2.0
  rsa==4.9.1
  six==1.17.0
  sniffio==1.3.1
  text-unidecode==1.3
  toml==0.10.2
  typing_extensions==4.15.0
  tzdata==2025.2
  uritemplate==4.2.0
  urllib3==1.26.20
  watchdog==4.0.2

]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "videomerger-app"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}